--- a/Petspot/Base.lproj/Main.storyboard
+++ b/Petspot/Base.lproj/Main.storyboard
@@ -195,16 +195,28 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
+                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0ID-yW-e1G">
+                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                                <items>
+                                    <navigationItem title="Home" id="5qb-aL-sd1">
+                                        <barButtonItem key="leftBarButtonItem" title="Profile" id="IfA-RV-btO"/>
+                                        <barButtonItem key="rightBarButtonItem" title="Item" systemItem="search" id="Xj2-Ug-6aE">
+                                            <connections>
+                                                <action selector="search_button:" destination="RMx-5e-96c" id="nzc-ll-JOf"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="syn-WP-Xxl">
                                 <rect key="frame" x="0.0" y="524" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                 <items>
-                                    <barButtonItem title="Item" systemItem="search" id="Xj2-Ug-6aE">
-                                        <connections>
-                                            <action selector="search_button:" destination="RMx-5e-96c" id="nzc-ll-JOf"/>
-                                        </connections>
-                                    </barButtonItem>
+                                    <barButtonItem title="My Pins" id="7uT-bn-oho"/>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="7Ht-9n-mtD"/>
+                                    <barButtonItem title="Friends" id="Fi7-Do-JH5"/>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="78q-98-cX2"/>
                                     <barButtonItem title="Log out" id="O1z-oS-1C9">
                                         <color key="tintColor" red="0.58072251080000004" green="0.066734083" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         <connections>
@@ -213,13 +225,6 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
-                            <navigationBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="0ID-yW-e1G">
-                                <rect key="frame" x="0.0" y="20" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
-                                <items>
-                                    <navigationItem title="Home" id="5qb-aL-sd1"/>
-                                </items>
-                            </navigationBar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="6RT-MX-Ve4"/>
@@ -442,6 +447,13 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="elQ-vh-CcC">
+                                <rect key="frame" x="16" y="491" width="288" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <color key="textColor" red="0.4756349325" green="0.47564673419999998" blue="0.47564041610000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <viewLayoutGuide key="safeArea" id="o5a-7h-Wx4"/>
@@ -451,6 +463,7 @@
                         <outlet property="pet_category_label" destination="9oB-5F-KGb" id="Cvm-Wg-c5M"/>
                         <outlet property="pet_name_label" destination="ac3-Oe-H4p" id="ENe-Pz-9GD"/>
                         <outlet property="pet_type_label" destination="OUw-E0-TOI" id="2hp-2I-LVJ"/>
+                        <outlet property="request_output_label" destination="elQ-vh-CcC" id="ghh-ch-GfG"/>
                         <outlet property="username_label" destination="X6T-7H-MwU" id="4IZ-vk-8Ra"/>
                     </connections>
                 </viewController>
